[gd_scene load_steps=28 format=1]

[ext_resource path="res://scripts/title.gd" type="Script" id=1]
[ext_resource path="res://picture/bg_title.png" type="Texture" id=2]
[ext_resource path="res://picture/light_shaft.tex" type="Texture" id=3]
[ext_resource path="res://picture/logo.tex" type="Texture" id=4]
[ext_resource path="res://picture/start_hover.tex" type="Texture" id=5]
[ext_resource path="res://picture/start_normal.tex" type="Texture" id=6]
[ext_resource path="res://picture/high_score_normal.tex" type="Texture" id=7]
[ext_resource path="res://picture/high_score_hover.tex" type="Texture" id=8]
[ext_resource path="res://picture/credit_hover.tex" type="Texture" id=9]
[ext_resource path="res://picture/credit_normal.tex" type="Texture" id=10]
[ext_resource path="res://picture/exit_hover.tex" type="Texture" id=11]
[ext_resource path="res://picture/exit_normal.tex" type="Texture" id=12]
[ext_resource path="res://picture/back_hover.tex" type="Texture" id=13]
[ext_resource path="res://picture/back_normal.tex" type="Texture" id=14]
[ext_resource path="res://Fonts/th_saraban_new_72.fnt" type="BitmapFont" id=15]
[ext_resource path="res://Fonts/th_saraban_new_32.fnt" type="BitmapFont" id=16]
[ext_resource path="res://instance/ShowScore.tscn" type="PackedScene" id=17]
[ext_resource path="res://2000px-Godot_(game_engine)_logo.svg.png" type="Texture" id=18]
[ext_resource path="res://sounds/spark.ogg" type="AudioStream" id=19]
[ext_resource path="res://sounds/zombie_hit.ogg" type="AudioStream" id=20]
[ext_resource path="res://sounds/bgm_title.ogg" type="AudioStream" id=21]
[ext_resource path="res://sounds/toung.ogg" type="AudioStream" id=22]

[sub_resource type="Animation" id=1]

resource/name = "go_cretdit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Creadit:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "go_title"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Creadit:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HighScore:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "high_to_title"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HighScore:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Creadit:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]

resource/name = "title_to_high"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Title:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HighScore:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="loby" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="BG" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="LightShaft" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="Title" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Logo" type="TextureFrame" parent="Title"]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -390.0
margin/top = -220.0
margin/right = -4190.0
margin/bottom = 2980.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="Start" type="TextureButton" parent="Title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 860.0
margin/top = 290.0
margin/right = 1136.0
margin/bottom = 360.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="HighScore" type="TextureButton" parent="Title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 860.0
margin/top = 380.0
margin/right = 1136.0
margin/bottom = 450.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Credit" type="TextureButton" parent="Title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 860.0
margin/top = 470.0
margin/right = 1136.0
margin/bottom = 540.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Exit" type="TextureButton" parent="Title"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 860.0
margin/top = 560.0
margin/right = 1136.0
margin/bottom = 630.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/hover = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Creadit" type="Control" parent="."]

visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Back" type="TextureButton" parent="Creadit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 610.0
margin/right = 486.0
margin/bottom = 680.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/hover = ExtResource( 14 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Head" type="Label" parent="Creadit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 830.0
margin/top = 60.0
margin/right = 958.0
margin/bottom = 113.0
custom_fonts/font = ExtResource( 15 )
text = "Credit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Detail" type="Label" parent="Creadit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 620.0
margin/top = 170.0
margin/right = 1164.0
margin/bottom = 611.0
custom_fonts/font = ExtResource( 16 )
text = "Game Progammer / Game Project Leader
นายธัญญ์  ธรรมเศก - Than Dhammasage

Game Design
นายสมชัย  ลีลานิมิต - Somchai Leelanimit

3D/2D Animation
นายคฑาวุธ  ปลั่งพัฒนะพานิชย์

2D Game Design
นางสาวศานตมล  บุญฤทธิ์ - Santamon  Boonyarit

3D Game Design / CG Painting
นายนิพนธ์  แซ่เตียว
นายเกริกฤทธิ์  ศรีสมบูรณ์"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScore" type="Control" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Head" type="Label" parent="HighScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 490.0
margin/top = 40.0
margin/right = 769.0
margin/bottom = 93.0
custom_fonts/font = ExtResource( 15 )
text = "HIGH  SCORE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackFormHighScore" type="TextureButton" parent="HighScore"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 610.0
margin/right = 486.0
margin/bottom = 680.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/hover = ExtResource( 14 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ShowScore" parent="HighScore" instance=ExtResource( 17 )]

margin/left = 380.0
margin/top = 110.0
margin/right = 420.0
margin/bottom = 150.0

[node name="godot_logo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 640.0
margin/right = 190.0
margin/bottom = 701.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/go_cretdit = SubResource( 1 )
anims/go_title = SubResource( 2 )
anims/high_to_title = SubResource( 3 )
anims/start_title = SubResource( 4 )
anims/title_to_high = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start_title"

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 19 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayer 2" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 20 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayer 3" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 21 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayer4" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 22 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="mouse_enter" from="Title/Start" to="." method="_on_Start_mouse_enter"]

[connection signal="pressed" from="Title/Start" to="." method="_on_Start_pressed"]

[connection signal="mouse_enter" from="Title/HighScore" to="." method="_on_HighScore_mouse_enter"]

[connection signal="pressed" from="Title/HighScore" to="." method="_on_HighScore_pressed"]

[connection signal="mouse_enter" from="Title/Credit" to="." method="_on_Credit_mouse_enter"]

[connection signal="pressed" from="Title/Credit" to="." method="_on_Credit_pressed"]

[connection signal="mouse_enter" from="Title/Exit" to="." method="_on_Exit_mouse_enter"]

[connection signal="pressed" from="Title/Exit" to="." method="_on_Exit_pressed"]

[connection signal="mouse_enter" from="Creadit/Back" to="." method="_on_Back_mouse_enter"]

[connection signal="pressed" from="Creadit/Back" to="." method="_on_Back_pressed"]

[connection signal="mouse_enter" from="HighScore/BackFormHighScore" to="." method="_on_BackFormHighScore_mouse_enter"]

[connection signal="pressed" from="HighScore/BackFormHighScore" to="." method="_on_BackFormHighScore_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


